<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TDTaskActivity"
    android:background="@color/background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background"
        android:gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="Add Today Task"
        app:titleTextAppearance="@style/CenteredToolbarTitle"
        />


    <ImageView
        android:id="@+id/smImage"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:src="@drawable/t_task"
        android:padding="10dp"
        />


    <TextView
        android:id="@+id/textType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smImage"
        android:text="@string/enter_the_today_task_name"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/ibrand"
        android:textSize="15sp"
        android:textColor="@color/text_black"
        />


    <EditText
        android:id="@+id/tTaskName"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textType"
        android:background="@drawable/edit_text_bg"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/today_task_name"
        android:fontFamily="@font/ibrand"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:inputType="text"
        />


    <TextView
        android:id="@+id/textWork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tTaskName"
        android:text="@string/today_task_description"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ibrand"
        android:textSize="15sp"
        android:textColor="@color/text_black"
        />


    <EditText
        android:id="@+id/tt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textWork"
        android:background="@drawable/edit_text_bg"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:hint="Description"
        android:fontFamily="@font/ibrand"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/text_black"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        android:lines="3"
        android:minLines="3"
        android:maxLines="5" />



    <LinearLayout
        android:id="@+id/day_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tt_description"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2"
        >

        <!-- Work Day Dropdown -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/dayText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Task Day"
                android:textSize="15sp"
                android:fontFamily="@font/ibrand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/work_day"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dayText"
                android:hint="Choose Day"
                android:background="@drawable/edit_text_bg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:inputType="none"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ibrand"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Work Priority Dropdown -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <TextView
                android:id="@+id/priorityText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Work Priority"
                android:textSize="15sp"
                android:fontFamily="@font/ibrand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/ed_priority"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priorityText"
                android:hint="Choose Priority"
                android:fontFamily="@font/ibrand"
                android:background="@drawable/edit_text_bg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/text_black"
                android:textSize="14sp"
                android:inputType="none"
                android:layout_marginTop="5dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day_layout"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/create_button"
        android:text="Save"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/ibrand"
        />


</androidx.constraintlayout.widget.ConstraintLayout>